--- a/index.html
+++ b/index.html
@@ -13,70 +13,141 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container">
-        <div class="col-xl-12">
-            <nav class="navbar navbar-expand-lg navbar-light bg-white">
-                <div class="col-xl-2 col-4">
-                    <a class="navbar-brand" href="index.html" style="font-weight: bold; font-size: x-large;">
-                        Shun<span class="text-primary">.</span>
-                    </a>
-                </div>
-                <div class="col-xl-10 col-8 text-right">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Dropdown link
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else </a>
-                                </div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Pricing</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link d-block d-xl-none" href="#">Sign in</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link d-block d-xl-none" href="#">Register</a>
-                            </li>
-                        </ul>
-                        <form class="form-inline my-2 my-lg-0 d-none d-xl-block">
-                            <button class="btn btn-outline-secondary">Sign in</button>
-                            <button class="btn btn-primary ml-xl-2">Register</button>
-                        </form>
+        <div class="row">
+            <div class="col-xl-12 pl-0 pr-0">
+                <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                    <div class="col-xl-2 col-4">
+                        <a class="navbar-brand" href="index.html" style="font-weight: bold; font-size: x-large;">
+                            Launch<span class="text-primary">.</span>
+                        </a>
                     </div>
-                </div>
-            </nav>
+                    <div class="col-xl-10 col-8 text-right">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Dropdown link
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something else </a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Features</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Pricing</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Contact</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link d-block d-xl-none" href="#">Sign in</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link d-block d-xl-none" href="#">Register</a>
+                                </li>
+                            </ul>
+                            <form class="form-inline my-2 my-lg-0 d-none d-xl-block">
+                                <button class="nav-btn btn-outline-secondary">Sign in</button>
+                                <button class="nav-btn btn-primary ml-xl-2">Register</button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
-
-
+    <div class="untree_co-hero">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-5">
+                    <h1 class="heading">Promote Your Products by Colorlib</h1>
+                    <p>Another cool free html css template by <span style="color: #0069D9;">Colorlib</span> Far far
+                        away,behind the word mountains,far from the countries Vokalia and Consonantia, there live the
+                        blind
+                        texts. Separated they live inBookmarksgrove
+                        right at the coast</p>
+                    <button class="btn btn-primary">SEE FEATURES</button>
+                    <button class="btn btn-outline-primary">PRICING</button>
+                </div>
+                <div class="col-xl-7">
+                    <img src="https://preview.colorlib.com/theme/launch/images/market-launch-pana.svg" alt=""
+                        class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="untree_co-section">
+        <section>
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-xl-4">
+                        <div class="mb-4">
+                            <h6 class="text-primary" style="font-weight: bold;">DIGITAL SERVICES</h6>
+                            <h3 id="caption" class="mb-4">
+                                Selling Digital Services
+                            </h3>
+                            <p>
+                                Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts. Separated they live in Bookmarksgrove right at the coast
+                            </p>
+                            <ul class="list-unstyled">
+                                <li><i class="fa fa-check mr-1 text-primary" aria-hidden="true"></i>There live the blind
+                                    texts</li>
+                                <li><i class="fa fa-check mr-1 text-primary" aria-hidden="true"></i>Far far away behind
+                                    the
+                                    word</li>
+                            </ul>
+                        </div>
+                        <div class="mb-4">
+                            <blockquote>
+                                “Separated they live in Bookmarksgrove right at the coast of the Semantics, a large
+                                language ocean. A small river named Duden flows by their place and supplies it with the
+                                necessary regelialia. ”
+                            </blockquote>
+                            <div class="author row">
+                                <div class="pic mr-3 col-xl-2 p-0 pl-3">
+                                    <img src="https://preview.colorlib.com/theme/launch/images/person_1.jpg.webp" alt=""
+                                        class="img-fluid">
+                                </div>
+                                <div class="col-xl-9 p-0">
+                                    <strong class="d-block" style="color: black;">James Andreson</strong>
+                                    <span class="d-block">Facebook, Product Lead </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-7">
+                        <iframe width="100%" height="100%" src=" https://www.youtube.com/embed/QyhwSYhX09s"
+                            title="corporate video for IT company | corporate video for Perfectial" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
